# Square-1-Solver-Rust

./: .gitignore  Cargo.toml  README.md  config_cam_left.txt  config_cam_right.txt  picconfig.toml  robot.sh
src/: lib.rs  main.rs  solver.rs  square1.rs
src/robot/: builder.rs  cameras.rs  controller.rs  mod.rs  motors.rs  partpiece.rs  picconfig.rs  pictureset.rs
src/robot/motor_controller/: motor_controller.ino
src/state/: mod.rs  stateall.rs  statecs.rs  statesqsq.rs  symmetry.rs
src/table/: mod.rs  postable.rs
