[package]
name = "square-1-solver-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
indicatif = "0.18.0"
rayon = "1.10.0"
bytemuck = "1.23.1"
rand = "0.9.1"
image = "0.25.6"
imageproc = "0.25.0"
toml = "0.9.2"
serde = "1.0"
serde_derive = "1.0"
inputbot = "0.6.0"
serialport = "4.7.2"
ws2818-rgb-led-spi-driver = "2.0.0"
